--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
                 <div class="collapse navbar-collapse" id="menu">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link active" href="#">Timão!</a></li>
+                        <li class="nav-item"><a class="nav-link active" 
+                        href="index.html">Timão!</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">História</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Conquistas</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Elenco</a></li>
@@ -195,7 +196,7 @@
         <div class="row align-items-center g-0">
 
             <div class="col-md-3 text-start ps-4">
-                <img src="img/antigo1.png" alt="Símbolo Corinthians" style="max-height: 40px; width: 40px; height: auto;">
+                <img src="img/antigo2.png" alt="Símbolo Corinthians" style="max-height: 40px; width: 40px; height: auto; filter: invert(100%);">
             </div>
 
             <div class="col-md-9 text-end pe-4">
