--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="img/logo_header.png" alt="Logo do site" width="60" height="60" class="d-inline-block align-text-top">
@@ -23,11 +23,15 @@
                 <div class="collapse navbar-collapse" id="menu">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link active" 
-                        href="index.html">Timão!</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">História</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Conquistas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Elenco</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Estatísticas</a></li>
+                            href="index.html">Timão!</a></li>
+                        <li class="nav-item"><a class="nav-link" 
+                            href="historia.html">História</a></li>
+                        <li class="nav-item"><a class="nav-link" 
+                            href="conquistas.html">Conquistas</a></li>
+                        <li class="nav-item"><a class="nav-link" 
+                            href="elenco.html">Elenco</a></li>
+                        <li class="nav-item"><a class="nav-link" 
+                            href="estatisticas.html">Estatísticas</a></li>
                     </ul>
                 </div>
             </div>
