--- a/historia.html
+++ b/historia.html
@@ -124,7 +124,7 @@
             </div>
 
             <div class="col-md-9 text-end pe-4">
-                <p class="mb-0 small">SITE DESENVOLVIDO POR KADU ALMEIDA E FERNANDO ALMEIDA &copy; 2025</p>
+                <p class="mb-0 small footer-text">Site desenvolvido por Kadu Almeida e Fernando Almeida &copy; 2025</p>
             </div>
             
         </div>
