--- a/historia.html
+++ b/historia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu projeto com bootstrap</title>
+    <title>Poderoso Timão</title>
     <link rel="stylesheet" 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilo.css">
@@ -46,7 +46,7 @@
         
         <div class="col-md-6 order-md-1">
             <h3 class="fw-bolder mb-3 text-dark">O Grito de 1910: A Várzea e a Alma Popular</h3>
-            <p class="text-muted">O Sport Club Corinthians Paulista nasceu em 1º de setembro de 1910, fundado por cinco operários no Bom Retiro. O nome veio como homenagem ao Corinthian Football Club (Inglaterra), mas a alma era 100% brasileira e popular. Rapidamente, o clube conquistou o povo trabalhador de São Paulo, estabelecendo a Fiel Torcida. O sucesso veio cedo, com o primeiro tricampeonato paulista em 1928, 1929 e 1930.</p>
+            <p class="text-muted">O Sport Club Corinthians Paulista nasceu em 1º de setembro de 1910, fundado por operários no Bom Retiro. O nome veio como homenagem ao Corinthian Football Club (Inglaterra), mas a alma era 100% brasileira e popular. Rapidamente, o clube conquistou o povo trabalhador de São Paulo, estabelecendo a Fiel Torcida. O sucesso veio cedo, com o primeiro tricampeonato paulista em 1928, 1929 e 1930.</p>
             <p class="text-muted">A inauguração do histórico Estádio do Pacaembu pavimentou o caminho para se tornar um gigante, consolidando a identidade de clube da várzea e dos trabalhadores.</p>
         </div>
         
