--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="conteudo">
       <h2>O Começo</h2>
-      <p>Fundado em 1º d setembro de 1910, no bairro do Bom Retiro, em São Paulo, o Sport Club Corinthians Paulista nasceu da vontade do povo, dos operários e trabalhadores que não tinham espaço nos clubes elitizados da época. Desde o início, o Corinthians se tornou o time do povo, representando aqueles que muitas vezes eram esquecidos, mas que no campo e na arquibancada mostravam sua força.</p>
+      <p>Fundado em 1º de setembro de 1910, no bairro do Bom Retiro, em São Paulo, o Sport Club Corinthians Paulista nasceu da vontade do povo, dos operários e trabalhadores que não tinham espaço nos clubes elitizados da época. Desde o início, o Corinthians se tornou o time do povo, representando aqueles que muitas vezes eram esquecidos, mas que no campo e na arquibancada mostravam sua força.</p>
 
       <p>O que engrandece o Corinthians não são apenas suas conquistas históricas — como a Libertadores de 2012, o Mundial de Clubes da FIFA, os inúmeros Campeonatos Brasileiros, Copas do Brasil e Paulistas — mas sim sua torcida inigualável: a Fiel Torcida, reconhecida no mundo inteiro pela paixão que move milhões de corações. O Corinthians é o time que joga junto com o povo, que sofre, vibra e renasce com ele.</p>
 
