--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Poderoso Timão</title>
     <link rel="stylesheet" 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.cs">
     
 </head>
 <body>
