--- a/estatisticas.html
+++ b/estatisticas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" 
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="icon" href="../img/hino.png" type="image/png">
     
 </head>
 <body>
