--- a/elenco.html
+++ b/elenco.html
@@ -32,16 +32,20 @@
                         <li class="nav-item"><a class="nav-link active" 
                             href="elenco.html">Elenco</a></li>
                         <li class="nav-item"><a class="nav-link" 
-                            href="estatisticas.html">Estatísticas</a></li>
+                            href="cadastro.html">Cadastro</a></li>
                     </ul>
                 </div>
             </div>
   </nav>
 
- <div style="padding-top: 90px;"></div>
-
-    <section class="container my-5 py-3">
-        <h2 class="text-center fw-bold mb-5 text-dark">Elenco</h2>
+    <section class="hero-section2 text-white d-flex align-items-center">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-3 offset-lg-1 p-4">
+                <h1 class="display-4 fw-bold mt-n6" style="margin-top:-8.5rem;">Elenco</h1>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="container my-5 py-3">
@@ -135,6 +139,225 @@
         </div>
     </section>
 
+    <section class="container my-5 py-3">
+        <h2 class="text-left fw-bold mb-3 text-dark">Laterais</h2>
+        <hr/>
+
+        <div class="row g-4 justify-content-left">
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Lat</div>
+                    <img src="img_e/angileri.png" alt="Fabrizio Angileri" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Fabrizio Angileri</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Lateral</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Lat</div>
+                    <img src="img_e/hugo2.png" alt="Hugo" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Hugo</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Lateral</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Lat</div>
+                    <img src="img_e/matheuzinho.png" alt="Matheuzinho" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Matheuzinho</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Lateral</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Lat</div>
+                    <img src="img_e/bidu.png" alt="Matheus Bidu" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Matheus Bidu</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Lateral</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container my-5 py-3">
+        <h2 class="text-left fw-bold mb-3 text-dark">Meias</h2>
+        <hr/>
+
+        <div class="row g-4 justify-content-left">
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Meia</div>
+                    <img src="img_e/garro.png" alt="Rodrigo Garro" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Rodrigo Garro</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Meia</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Meia</div>
+                    <img src="img_e/carrillo.png" alt="André Carrillo" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">André Carrillo</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Meia</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Meia</div>
+                    <img src="img_e/maycon.png" alt="Maycon" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Maycon</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Meia</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Meia</div>
+                    <img src="img_e/raniele.png" alt="Raniele" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Raniele</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Meia</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Meia</div>
+                    <img src="img_e/martinez.png" alt="José Martinez" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">José Martinez</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Meia</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Meia</div>
+                    <img src="img_e/charles.png" alt="Charles" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Charles</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Meia</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Meia</div>
+                    <img src="img_e/bidon.png" alt="Breno Bidon" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Breno Bidon</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Meia</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Meia</div>
+                    <img src="img_e/ryan.png" alt="Ryan" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Ryan</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Meia</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container my-5 py-3">
+        <h2 class="text-left fw-bold mb-3 text-dark">Atacantes</h2>
+        <hr/>
+
+        <div class="row g-4 justify-content-left">
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Ata</div>
+                    <img src="img_e/yuri.png" alt="Yuri Alberto" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Yuri Alberto</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Ata</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Ata</div>
+                    <img src="img_e/memphis.png" alt="Memphis" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Memphis</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Ata</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Ata</div>
+                    <img src="img_e/romero.png" alt="Romero" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Romero</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Ata</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Ata</div>
+                    <img src="img_e/vitinho.png" alt="Vitinho" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Vitinho</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Ata</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Ata</div>
+                    <img src="img_e/kayke.png" alt="Kayke" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Kayke</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Ata</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-6 col-md-4 col-lg-2">
+                <div class="card player-card">
+                    <div class="plus-icon">Ata</div>
+                    <img src="img_e/magno.png" alt="Talles Magno" class="player-img">
+                    <div class="card-body">
+                        <div class="player-name">Talles Magno</div>
+                        <div class="text-secondary" style="font-size: 0.9rem;">Ata</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 <footer class="bg-dark text-white pt-3 pb-4 mt-5 footer-full-width">
     
     <div class="container-fluid px-0">
