--- a/historia.html
+++ b/historia.html
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link" 
                             href="elenco.html">Elenco</a></li>
                         <li class="nav-item"><a class="nav-link" 
-                            href="estatisticas.html">Estatísticas</a></li>
+                            href="cadastro.html">Cadastro</a></li>
                     </ul>
                 </div>
             </div>
