--- a/conquistas.html
+++ b/conquistas.html
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link" 
                             href="elenco.html">Elenco</a></li>
                         <li class="nav-item"><a class="nav-link" 
-                            href="cadastro.html">Cadastro</a></li>
+                            href="sessao.html">Cadastro</a></li>
                     </ul>
                 </div>
             </div>
