--- a/sessao.html
+++ b/sessao.html
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a class="nav-link" 
                             href="elenco.html">Elenco</a></li>
                         <li class="nav-item"><a class="nav-link active" 
-                            href="cadastro.html">Cadastro</a></li>
+                            href="sessao.html">Cadastro</a></li>
                     </ul>
                 </div>
             </div>
@@ -44,11 +44,11 @@
 
   <section>
   <div class="container mt-5 col-lg-5">
-    <form class="formulario p-4 bg-dark text-light rounded shadow">
+    <form class="formulario2 p-4 bg-dark text-light rounded shadow">
       <h3 class="text-center mb-4 text-light">Iniciar Sessão</h3>
 
       <div class="mb-3">
-        <label for="nome" class="form-label text-light">Nome</label>
+        <label for="nome" class="form-label text-light">E-mail/CPF</label>
         <input type="text" class="form-control bg-dark text-light border-white" id="nome">
       </div>
    
@@ -67,7 +67,7 @@
     </form>
   </div>
   </section>
-  
+
   <footer class="bg-dark text-white pt-3 pb-4 mt-5 footer-full-width">
       
       <div class="container-fluid px-0">
